--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "dependencies": {
         "@material-ui/data-grid": "^4.0.0-alpha.35",
         "@material-ui/lab": "^4.0.0-alpha.60",
+        "axios": "^0.21.1",
         "bootstrap": "^5.0.2",
         "clsx": "^1.1.1",
         "font-awesome": "^4.7.0",
+        "formik": "^2.2.9",
         "history": "^5.0.0",
         "jquery": "^3.6.0",
         "material-design-icons": "^3.0.1",
@@ -39,12 +41,15 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-image-magnify": "^2.7.4",
+        "react-loadingg": "^1.7.2",
         "react-multi-carousel": "^2.6.3",
         "react-redux": "^7.2.4",
         "react-router": "^6.0.0-beta.0",
         "react-router-dom": "^6.0.0-beta.0",
         "recharts": "^2.1.0",
         "redux": "^4.1.1",
-        "redux-saga": "^1.1.3"
+        "redux-saga": "^1.1.3",
+        "use-dencrypt-effect": "^1.0.2",
+        "yup": "^0.32.9"
     }
 }
