[Fur-FE] [Login - ...chua xong] 19/08/21

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^9.0.1",
         "css-loader": "^6.2.0",
+        "dotenv-webpack": "^7.0.3",
         "file-loader": "^6.2.0",
         "html-loader": "^2.1.2",
         "style-loader": "^3.2.1",
@@ -30,6 +31,7 @@
         "@material-ui/data-grid": "^4.0.0-alpha.35",
         "@material-ui/lab": "^4.0.0-alpha.60",
         "axios": "^0.21.1",
+        "body-scroll-lock": "^4.0.0-beta.0",
         "bootstrap": "^5.0.2",
         "clsx": "^1.1.1",
         "font-awesome": "^4.7.0",
@@ -40,6 +42,7 @@
         "material-ui-phone-number": "^2.2.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-facebook-login": "^4.1.1",
         "react-image-magnify": "^2.7.4",
         "react-loadingg": "^1.7.2",
         "react-multi-carousel": "^2.6.3",
