--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack",
-        "start": "webpack serve",
+        "start": "webpack serve ",
         "format": "prettier --write src/**/*.{js,json,scss}"
     },
     "author": "",
@@ -23,6 +23,7 @@
         "css-loader": "^6.2.0",
         "dotenv-webpack": "^7.0.3",
         "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.24.0",
@@ -56,6 +57,7 @@
         "react-redux": "^7.2.4",
         "react-router": "^6.0.0-beta.0",
         "react-router-dom": "^6.0.0-beta.0",
+        "react-scroll": "^1.8.3",
         "recharts": "^2.1.0",
         "redux": "^4.1.1",
         "redux-saga": "^1.1.3",
