[FU_FE [Category-CRUD-handling] 06/09/21

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dependencies": {
         "@material-ui/data-grid": "^4.0.0-alpha.35",
         "@material-ui/lab": "^4.0.0-alpha.60",
+        "@mui/x-data-grid": "^4.0.0",
         "axios": "^0.21.1",
         "body-scroll-lock": "^4.0.0-beta.0",
         "bootstrap": "^5.0.2",
