--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "file-loader": "^6.2.0",
         "html-loader": "^2.1.2",
         "prettier": "2.3.2",
+        "sass": "^1.41.0",
+        "sass-loader": "^12.1.0",
         "style-loader": "^3.2.1",
-        "webpack": "^5.48.0",
+        "webpack": "^5.52.1",
         "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
     },
@@ -49,11 +51,13 @@
         "jquery": "^3.6.0",
         "material-design-icons": "^3.0.1",
         "material-ui-phone-number": "^2.2.6",
+        "node-sass": "^6.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-facebook-login": "^4.1.1",
         "react-image-magnify": "^2.7.4",
         "react-loadingg": "^1.7.2",
+        "react-motion": "^0.5.2",
         "react-multi-carousel": "^2.6.3",
         "react-redux": "^7.2.4",
         "react-router": "^6.0.0-beta.0",
